[gd_scene load_steps=7 format=3 uid="uid://p6r06nrvxb45"]

[ext_resource type="Script" path="res://Generation/Rooms/Scripts/corridor_segment.gd" id="1_qlw07"]
[ext_resource type="TileSet" uid="uid://cqjb5b50o78hy" path="res://Generation/world.tres" id="2_8jsf8"]
[ext_resource type="Texture2D" uid="uid://d4coh48jn31jh" path="res://Assets/Sprites/Effects/light.png" id="3_bafd4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68egh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvvrp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1d1hd"]
size = Vector2(192, 192)

[node name="Corridor_segment" type="Node2D"]
z_index = -1
y_sort_enabled = true
position = Vector2(32, 0)
script = ExtResource("1_qlw07")

[node name="TileMapFloor" type="TileMap" parent="."]
tile_set = ExtResource("2_8jsf8")
format = 2
layer_0/name = "floor"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(196607, 327680, 0, 131072, 327680, 0, 2, 131072, 1610612738, -65534, 131072, 1610612739, -65535, 262144, 268435456, -65536, 327680, 0, 0, 327680, 0, 1, 262144, 268435456, 65536, 327680, 0, 65537, 262144, 268435456, 131071, 327680, 0, 131070, 262144, 0, 65534, 262144, 0, 65533, 131072, 1610612738, 65535, 327680, 0, -1, 327680, 0, -2, 262144, 0, -65538, 262144, 0, -131073, 327680, 0, -65537, 327680, 0, -131072, 327680, 0, -196608, 327680, 0, -131071, 262144, 268435456, 131069, 196608, 0, 196605, 196608, 0, 196606, 262144, 0, 131073, 262144, 268435456, 131074, 196608, 0, 65538, 196608, 0, -131070, 196608, 0, -196606, 196608, 0, -196607, 262144, 268435456, -131074, 262144, 0, -131075, 196608, 0, -65539, 196608, 0, -3, 131072, 1610612739)

[node name="TileMapWall" type="TileMap" parent="."]
tile_set = ExtResource("2_8jsf8")
format = 2
layer_0/name = "wall"
layer_1/name = "wall_up_0"
layer_1/enabled = false
layer_1/tile_data = PackedInt32Array(-262147, 131072, 1, -262146, 131072, 1, -262145, 131072, 1, -327680, 131072, 1, -327679, 131072, 1, -327678, 131072, 1, -196611, 0, 2, -196610, 0, 6, -196609, 65536, 6, -262144, 65536, 6, -262143, 131072, 6, -262142, 196608, 6)
layer_2/name = "wall_up_1"
layer_2/enabled = false
layer_2/tile_data = PackedInt32Array(-196611, 0, 2, -196610, 196608, 6, -262143, 196608, 6, -262142, 0, 2, -262147, 131072, 1, -262146, 65536, 1, -327679, 0, 1, -327678, 131072, 1)
layer_3/name = "wall_down_0"
layer_3/enabled = false
layer_3/y_sort_enabled = true
layer_3/z_index = 4
layer_3/tile_data = PackedInt32Array(131069, 65536, 2, 131070, 0, 4, 131071, 65536, 4, 65536, 65536, 4, 65537, 131072, 4, 65538, 196608, 4, 2, 131072, 1, 1, 131072, 1, 0, 131072, 1, 65535, 131072, 1, 65534, 131072, 1, 65533, 131072, 1)
layer_4/name = "wall_down_1"
layer_4/enabled = false
layer_4/z_index = 4
layer_4/tile_data = PackedInt32Array(65538, 65536, 2, 131069, 65536, 2, 2, 131072, 1, 65533, 131072, 1, 65534, 65536, 0, 131070, 131072, 65536, 196606, 131072, 131072, 65537, 131072, 65536, 131073, 131072, 131072, 1, 0, 0)
layer_5/name = "wall_left_0"
layer_5/enabled = false
layer_5/tile_data = PackedInt32Array(-131075, 131072, 0, -65539, 131072, 0, -3, 131072, 0, 65533, 131072, 0, 131069, 131072, 0, 196605, 131072, 0)
layer_6/name = "wall_left_1"
layer_6/enabled = false
layer_6/z_index = 1
layer_6/tile_data = PackedInt32Array(131069, 131072, 0, 196605, 131072, 0, -3, 65536, 0, -196611, 65536, 1, 65533, 131072, 65536, -131075, 0, 131074)
layer_7/name = "wall_right_0"
layer_7/enabled = false
layer_7/tile_data = PackedInt32Array(-196606, 131072, 0, -131070, 131072, 0, -65534, 131072, 0, 2, 131072, 0, 65538, 131072, 0, 131074, 131072, 0)
layer_8/name = "wall_right_1"
layer_8/enabled = false
layer_8/z_index = 1
layer_8/tile_data = PackedInt32Array(-262142, 0, 1, -65534, 0, 0, 65538, 131072, 0, 131074, 131072, 0, -196606, 0, 131074, 2, 131072, 65536)

[node name="SimpleArea2D" type="Node2D" parent="."]

[node name="LEFT" type="Area2D" parent="SimpleArea2D"]
position = Vector2(-96, 0)
collision_layer = 256
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="SimpleArea2D/LEFT"]
shape = SubResource("RectangleShape2D_68egh")

[node name="UP" type="Area2D" parent="SimpleArea2D"]
position = Vector2(0, -96)
collision_layer = 256
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="SimpleArea2D/UP"]
shape = SubResource("RectangleShape2D_rvvrp")

[node name="RIGHT" type="Area2D" parent="SimpleArea2D"]
position = Vector2(96, 0)
collision_layer = 256
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="SimpleArea2D/RIGHT"]
shape = SubResource("RectangleShape2D_rvvrp")

[node name="DOWN" type="Area2D" parent="SimpleArea2D"]
position = Vector2(0, 96)
collision_layer = 256
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="SimpleArea2D/DOWN"]
shape = SubResource("RectangleShape2D_rvvrp")

[node name="CheckArea2D" type="Area2D" parent="."]
position = Vector2(-96, 0)
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckArea2D"]
position = Vector2(96, 0)
shape = SubResource("RectangleShape2D_1d1hd")
debug_color = Color(0.968627, 0.176471, 0, 0.0862745)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(1, 1.90735e-06)
scale = Vector2(2.30322, 2.30322)
blend_mode = 2
texture = ExtResource("3_bafd4")
texture_scale = 0.5
